# routon-cam

./: RoutonCamSDK.sln  RoutonCamTest.sln
RoutonCamSDK/: CMakeCache.txt  CMakeLists.txt  Makefile  RouronCamSDK.cpp  RoutonCam.cpp  RoutonCam.h  RoutonCamCommon.cpp  RoutonCamCommon.h  RoutonCamSDK.cpp  RoutonCamSDK.h  RoutonCamSDK.vcxproj  RoutonCamSDK.vcxproj.filters  RoutonCamType.h  cmake_install.cmake  make_so.sh
RoutonCamSDK/x64/Debug/: RoutonCamSDK.dll.recipe  RoutonCamSDK.ilk  vc143.idb
RoutonCamSDK/x64/Debug/RoutonCamSDK.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RoutonCamSDK.lastbuildstate  RoutonCamSDK.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
RoutonCamSDK/x64/Release/: RoutonCamSDK.dll.recipe  RoutonCamSDK.iobj  RoutonCamSDK.ipdb
RoutonCamSDK/x64/Release/RoutonCamSDK.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RoutonCamSDK.lastbuildstate  RoutonCamSDK.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
RoutonCamTest/: CMakeCache.txt  CMakeLists.txt  Makefile  RoutonCamSDK.h  RoutonCamTest.vcxproj  cmake_install.cmake  main.cpp  test_net_camera.sh
RoutonCamTest/include/: RoutonCamSDK.h
RoutonCamTest/lib/opencv/: libopencv_highgui.so.4.5.2  libopencv_imgcodecs.so.4.5.2
RoutonCamTest/x64/Debug/: RoutonCamTest.exe.recipe  RoutonCamTest.ilk  vc143.idb
RoutonCamTest/x64/Debug/RoutonCamTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  RoutonCamTest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Release/: RoutonCamSDK.exp  RoutonCamSDK.lib
